<resources>
    <string name="app_name">AppMonkeyKeeping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lunch">Lunch</string>
    <string name="roser">Roser fee</string>
    <string name="internet">Internet</string>
    <string name="gas">Gas</string>
    <string name="groceries">Groceries</string>
    <string name="breakfast">Breakfast</string>
    <string name="entertain">Entertainment</string>
    <string name="electricity">Electricity</string>
    <string name="transport">Transport</string>
    <string name="period">Is it period ?</string>
    <string name="mode_wondering">Which mode do you wanna choose ?</string>
    <string name="outcome">Outcome</string>
    <string name="income">Income</string>
    <string name="lend">Lend</string>
    <string name="borrow">Borrow</string>
    <string name="transfer">Transfer</string>
    <string name="skip">Skip to Dashboard</string>
</resources>